# libcaenrfid

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
debian/: README  changelog  control  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  libcaenrfid-dev.install  libcaenrfid.default.ex  libcaenrfid.doc-base.EX  libcaenrfid0.copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
src/: Makefile.am  caenrfid.c  caenrfid.h  caenrfid_old.h  caenrfid_proto.h  linux-gnu.c  linux-gnu.h  linux-gnueabi.c  linux-gnueabi.h  logging.h  macros.h
