# @configure_input@

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST =	debian/libcaenrfid.default \
		debian/changelog  debian/dirs \
		debian/libcaenrfid.dirs \
		debian/compat \
		debian/docs \
		debian/libcaenrfid.init \
		debian/control \
		debian/gbp.conf \
		debian/libcaenrfid.postinst \
		debian/copyright \
		debian/rules

SUBDIRS = 	src/
